fix z-index problem

--- a/src/components/molecules/social-sidebar/SocialSideBar.module.css
+++ b/src/components/molecules/social-sidebar/SocialSideBar.module.css
@@ -4,14 +4,23 @@
   width: 6vw;
   display: flex;
   flex-direction: column;
+  z-index: 1;
   justify-content: flex-end;
   align-items: center;
   padding: 1vw 0;
   grid-area: side-r;
+
+  &.covered {
+    z-index: 0;
+  }
 }
 
 .list {
   margin: 0;
+}
+
+.link {
+  color: currentColor;
 }
 
 .listItem {
